--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,3 +1,12 @@
-h1{
-    color: green;
+body {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.layout {
+    background-color: azure;
 }
